--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npm install pm2 -g",
+    "start": "pm2-runtime index.js -i max",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
