--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "HOST=localhost; react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
